[gd_scene load_steps=3 format=3 uid="uid://bad5gm1muaeu5"]

[ext_resource type="Script" path="res://scripts/Global/UI.gd" id="1_d6rvj"]
[ext_resource type="PackedScene" uid="uid://b321k5tqpukad" path="res://scenes/UI/main_menu.tscn" id="2_grf53"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_d6rvj")
action_items = Array[String](["move_up", "move_left", "move_down", "move_right", "mine", "interact"])

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "asdadsad"

[node name="TimeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "sadsadasd"
horizontal_alignment = 2

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.592157)

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_right = 500

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MASTERLABEL" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Master"

[node name="MASTERSLIDER" type="HSlider" parent="PauseMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLABEL" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX
"

[node name="SFXSLIDER" type="HSlider" parent="PauseMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="MUSICLABEL" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music
"

[node name="MUSICSLIDER" type="HSlider" parent="PauseMenu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="QuitButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "Quit
"

[node name="MainMenu" parent="." instance=ExtResource("2_grf53")]

[connection signal="value_changed" from="PauseMenu/MarginContainer/VBoxContainer/GridContainer/MASTERSLIDER" to="." method="_on_masterslider_value_changed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/VBoxContainer/GridContainer/SFXSLIDER" to="." method="_on_sfxslider_value_changed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/VBoxContainer/GridContainer/MUSICSLIDER" to="." method="_on_musicslider_value_changed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
